--- a/Ansible/roles/user_manage/defaults/main.yml
+++ b/Ansible/roles/user_manage/defaults/main.yml
@@ -1,4 +1,4 @@
-docker_version: "24.0.5"
-docker_compose_version: "2.33.1"
-ubuntu_release: "jammy" 
-state: present                   # present | absent
+username: devops
+user_groups: []
+user_ssh_key: ""
+user_state: present   # present | absent
