--- a/project/containers/nginx/config/nginx.conf
+++ b/project/containers/nginx/config/nginx.conf
@@ -34,7 +34,7 @@ http {
 
         location /dp/ {
             auth_basic "Restricted";
-            auth_basic_user_file /etc/nginx/.htpasswd;
+            auth_basic_user_file /etc/nginx/.httpasswd;
 
             proxy_pass https://web.devops/;
             rewrite ^/dp(/.*)$ $1 break;
