--- a/project/containers/nginx/Dockerfile
+++ b/project/containers/nginx/Dockerfile
@@ -5,7 +5,7 @@ COPY config/nginx.conf /etc/nginx/nginx.conf
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
-COPY .httpasswd /etc/nginx/.httpasswd
+COPY ./auth/.httpasswd /etc/nginx/.httpasswd
 COPY ./certs /etc/nginx/certs
 COPY ./root/ /opt/html/root/
 COPY ./upload/ /opt/html/upload/
