test Jenkinsfile parametrized CI

--- a/Ansible/playbooks/drupal.yml
+++ b/Ansible/playbooks/drupal.yml
@@ -3,8 +3,8 @@
   vars:
     drupal_compose_state: present
     mariadb_version: "11.1"
-    nginx_user: "admin"
-    nginx_password: "admin"
+    nginx_user: "not_admin"
+    nginx_password: "not_admin"
     compose_project_path: "/home/{{ ansible_user }}/projects/project/containers"
   roles:
     - drupal_deploy
